fix: spacing

--- a/fm/bleh.user.css
+++ b/fm/bleh.user.css
@@ -23832,7 +23832,7 @@
 
                 display: flex;
                 flex-direction: column;
-                gap: 10px;
+                gap: 8px;
 
                 &:before,
                 &:after {
